<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_action_sort_date_added">Date Added</string>
    <string name="title_action_sort_artist_name">Artist Name</string>
    <string name="title_action_sort_descending">Descending</string>
    <string name="title_action_sort_ascending">Ascending</string>
    <string name="title_sort_tracks_menu">Sort tracks</string>
    <string name="error_message_storage">device storage error!</string>
    <string name="error_message_unknown">Unknown error!</string>
    <string name="track_detail_duration_format">mm:ss</string>
    <string name="tab_title_tracks">TRACKS</string>
    <string name="tab_title_albums">ALBUMS</string>
    <string name="tab_title_playlists">PLAYLISTS</string>
    <string name="tab_title_artists">ARTISTS</string>
    <string name="tab_title_favorites">FAVORITES</string>
    <string name="dialog_permissions_message">In order to use app features,please allow the required storage permissions in app settings</string>
    <string name="dialog_permissions_title">Grant Permissions</string>
    <string name="dialog_permissions_positive_button">edit</string>
    <string name="dialog_permissions_negative_button">exit</string>
    <string name="title_action_share_track">Share</string>
    <string name="title_action_add_playlist">Add to playlist</string>
    <string name="title_action_delete_track">Delete</string>
    <string name="title_action_track_detail">Detail</string>
    <string name="arg_track_id">track id</string>
    <string name="mime_type_audio">audio/*</string>
    <string name="title_share_track">Share Track</string>
    <string name="title_dialog_negative_action">cancel</string>
    <string name="title_dialog_positive_action">ok</string>
    <string name="message_dialog_delete_track">are you sure you wont to delete this track from device(this action can not be undone)?</string>
    <string name="title_dialog_delete_track">Delete Track</string>
    <string name="title_dialog_track_detail">Track Detail</string>
    <string name="title_sort_albums_menu">Sort albums</string>
    <string name="title_action_sort_album_name">Album Name</string>
    <string name="title_action_favorite">Favorite</string>
    <string name="decription_fab_play_album">play album tracks</string>
    <string name="title_sort_artists_menu">Sort artists</string>
</resources>